fix the problem with overflow of the message text

--- a/src/components/ImportantMessage/ImportantMessage.scss
+++ b/src/components/ImportantMessage/ImportantMessage.scss
@@ -40,6 +40,9 @@ div#message {
             box-shadow: 1px 1px 10px $background-color;
         }
     }
+#message-text {
+    white-space: pre-wrap;
+}
     @media (max-width: 800px) {
         h1,
         h2 {
@@ -53,8 +56,8 @@ div#message {
         div,
         pre {
 
-            font-size: 0.7rem;
-
+            font-size: 1rem;
         }
+
     }
 }
